# turso-migrate

./: COMPARISON.md  Cargo.toml  DOCUMENTATION.md  IMPROVEMENTS.md  LICENSE  README.md  README_V2.md  REVIEW.md  turso_schema.sql
.github/workflows/: ci.yml
.sisyphus/: ralph-loop.local.md
.sisyphus/plans/: review-remediation-plan.md
src/: bridge.rs  connection.rs  converge.rs  data_migrations.rs  diff.rs  error.rs  execute.rs  introspect.rs  lib.rs  migrator.rs  options.rs  plan.rs  schema.rs
tests/: bridge.rs  check_constraints.rs  converge.rs  coverage.rs  data_migrations.rs  diff.rs  execute.rs  fuzz.rs  introspect.rs  migrator.rs  new_api.rs  partial_indexes.rs  triggers.rs
tests/common/: mod.rs
tests/fixtures/: schema.sql
